<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/reasonHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/congHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/congHeader"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/home"
            android:onClick="goToMenu" />
    </RelativeLayout>

    <TextView
        android:id="@+id/reasonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reasonHeader"
        android:layout_centerHorizontal="true"
        android:background="#2E2E2E"
        android:text="@string/reasonTitleText"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/reasonRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioOneText"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioTwoText"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioThreeText"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioFourText"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reasonRadioGroup"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/redbutton"
        android:onClick="doCollectReasonAndContinue"
        android:text="@string/contniue"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>