<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/ecodeOptionsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/congHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/congHeader"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/home"
            android:onClick="goToMenu" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="#222A0A" />

    <ImageView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/or"
        android:textColor="#222A0A"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/topEcodeText"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dip"
        android:text="@string/ecodeTopBottom"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="14dp"
        android:background="@drawable/redbutton"
        android:text="@string/enterEcodeTextBottom"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:text="@string/ecodeTopBottomBelow"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/enterEcodeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dip"
        android:background="@drawable/redbutton"
        android:onClick="doEnterEcode"
        android:text="@string/enterEcodeText"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/topBelowEcodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterEcodeBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/ecodeTopBelow"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topEcodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/topBelowEcodeText"
        android:layout_centerHorizontal="true"
        android:text="@string/ecodeTop"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>