<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity" >

    <ImageView
        android:id="@+id/splashBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/splash_screen"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:text="@string/skip"
        android:textColor="@color/white_color"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/version"
        android:textColor="@color/white_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/staticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/versionText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dip"
        android:text="@string/staticText"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/plantCountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/staticText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundbox"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>