<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/enterEcodeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/congHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/congHeader"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/home"
            android:onClick="goToMenu" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/enterEcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterEcodeHeader"
        android:layout_centerHorizontal="true"
        android:background="@drawable/step1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterEcode" >

        <TextView
            android:id="@+id/enterEcodeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ecodeDescription"
            android:textColor="@color/StTheme"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ecodeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterEcodeDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dip"
            android:hint="@string/ecodeHint"
            android:maxLength="8"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ecodeEditText"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/redbutton"
            android:onClick="doSaveEcodeAndContinue"
            android:text="@string/buttonTextEcode"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>